@startuml Command Pattern
interface ICommand {
    + ExecuteAsync(message: Message, user: User)
}
class StartCommand
class SingleAudioUploadCommand
class ScanCommand <<Admin>>
class ModTestCommand <<Admin>>

ICommand <|.. StartCommand
ICommand <|.. SingleAudioUploadCommand
ICommand <|.. ScanCommand
ICommand <|.. ModTestCommand

note bottom of ScanCommand
  Allows manual triggering of 
  Spectral Analysis for a specific file.
end note
@enduml
